[flake8]
ignore = E501

[metadata]
name = your_project_name
version = 0.1.0
description = A brief description of your project
author = Barry Baker
author_email = barry.baker@noaa.gov
license = MIT
url = https://github.com/bbakernoaa/ReMONET

[options]
packages = find:
install_requires =
    xarray
    pytest
    esmpy
    dask
    cf_xarray

    # List your project's dependencies here, e.g.
    # numpy
    # pandas
    # xarray

[options.extras_require]
dev =
    flake8
    pytest
    # Add other development dependencies here

[options.package_data]
* = *.txt, *.rst

[tool:pytest]
testpaths = tests